welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:4: error: '(' expected but '{' found.
	}else if{
                ^redTicket:13: error: illegal start of simple expression
} 
^